--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,16 +1,9 @@
 <header>
   <div class="nes-container is-rounded blue-border header">
-    {% if site.logo %}
-      {% if site.logo contains 'nes-' %}
-      <i class="{{ site.logo }}"></i>
-      {% else %}
-      <img src="{{site.logo | relative_url}}" alt="Logo" />
-      {% endif %}
-    {% endif %}
+    <img src="images/output-onlinepngtools.png" alt="Logo" />
     <h1>
-      <a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
+      <a href="{{ '/' | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
     </h1>
-    <p class="description">{{ site.description | default: site.github.project_tagline }}</p>
     {% if site.social %}
       {% include social.html  %}
     {% endif %}
