--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,13 +4,10 @@
   <body>
     <div class="wrapper">
       {% include header.html %}
-      {% if site.github.is_project_page %}
-        {% include fork-me.html %}
-      {% endif %}
-      <section>
-        {{ content }}
-      </section>
-      {% include footer.html %}
+<!--      <section>-->
+<!--        {{ content }}-->
+<!--      </section>-->
+<!--      {% include footer.html %}-->
     </div>
   </body>
 </html>
