--- a/_sass/jekyll-theme-8bit.scss
+++ b/_sass/jekyll-theme-8bit.scss
@@ -11,7 +11,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Press Start 2P', Helvetica, Arial, sans-serif;
   font-weight: 400;
-  margin: 0 0 20px;
+  margin: 0 0 0;
 }
 
 h1 {
@@ -152,10 +152,6 @@ footer {
   background-color: #E735FF;
 }
 
-.nes-container.card {
-  background-color: #5adb57;
-}
-
 .nes-container .nes-kirby {
   display: block;
   margin: 15px auto;
@@ -195,13 +191,28 @@ footer {
   align-self: flex-end;
 }
 
+
 .nes-container.downloads {
   font-family: 'Press Start 2P', Helvetica, Arial, sans-serif;
   background-color: #5adb57;
   margin-top: 12px;
 }
 
+.nes-container.top-panel {
+  font-family: 'Press Start 2P', Helvetica, Arial, sans-serif;
+  border: none;
+  padding-top: 0;
+  padding-bottom: 0;
+  margin-top: 6px;
+}
+
+.nes-container.card {
+  background-color: #58c7ff;
+  padding-top: 20px;
+}
+
 .nes-btn.is-file {
+  width: 120px;
   color: #fafafa;
   background-color: #01b801;
 }
