Add more structure to the website, and center socias media

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,9 +1,12 @@
-<div class="logos">
-  {% assign networks = "instagram,soundcloud" %}
+<social>
+  <div class="nes-container is-centered social">
+  {% assign networks = "instagram" %}
 <!--  twitter,facebook,github,youtube,google,medium,twitch,reddit,whatsapp,gmail,linkedin,-->
   {% for entry in site.social %}
     {% if networks contains entry[0] %}
     <a href="{{ entry[1] }}" target="_blank"><i class="nes-icon {{ entry[0] }}"></i></a>
     {% endif %}
   {% endfor %}
-</div>
+    </div>
+
+</social>
