--- a/_includes/card.html
+++ b/_includes/card.html
@@ -1,4 +1,4 @@
-
+<card>
 <div class="nes-container is-centered top-panel">
     <div>
     <a class="nes-btn is-file" href="">MUSIC</a>
@@ -7,5 +7,10 @@
     <a class="nes-btn is-file" href="">CONTACT</a>
     </div>
 </div>
-<div class="nes-container is-rounded blue-border card">
+<div class="nes-container is-rounded green-border card">
+    <h1>
+        SUP B
+    </h1>
 </div>
+
+</card>
