--- a/_sass/jekyll-theme-8bit.scss
+++ b/_sass/jekyll-theme-8bit.scss
@@ -118,6 +118,11 @@ header h1 a{
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
+card h1{
+  color: #fff;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
 section {
   width: 500px;
   min-height: 810px;
@@ -206,9 +211,18 @@ footer {
   margin-top: 6px;
 }
 
+.nes-container.social {
+  font-family: 'Press Start 2P', Helvetica, Arial, sans-serif;
+  border: none;
+  padding-top: 10px;
+  padding-bottom: 0;
+  margin-top: 6px;
+}
+
 .nes-container.card {
-  background-color: #58c7ff;
-  padding-top: 20px;
+  background-color: #5adb57;
+  height: 300px;
+  padding-top: 30px;
 }
 
 .nes-btn.is-file {
