Correct the padding bug.

--- a/_sass/jekyll-theme-8bit.scss
+++ b/_sass/jekyll-theme-8bit.scss
@@ -394,7 +394,7 @@ a:hover span.next::before {
 
   header, section, footer {
     margin: 0;
-    padding: 50px 0px;
+    padding-top: 50px;
   }
 
   header p.view {
