Change font sizes and image size.

--- a/_sass/jekyll-theme-8bit.scss
+++ b/_sass/jekyll-theme-8bit.scss
@@ -15,7 +15,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 28px;
+  padding-top: 20px;
+  font-size: 40px;
   text-align: center;
 }
 
@@ -107,7 +108,7 @@ header {
 
 header img{
   display: block;
-  width: 150px;
+  width: 220px;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 10px;
