Add the scaling for the palm trees.

--- a/_includes/card.html
+++ b/_includes/card.html
@@ -9,7 +9,7 @@
 </div>
 <div class="nes-container is-rounded green-border card">
     <h1>
-        SUP B
+        HOT GIRL SHIT
     </h1>
 </div>
 
