--- a/_sass/jekyll-theme-8bit.scss
+++ b/_sass/jekyll-theme-8bit.scss
@@ -55,10 +55,9 @@ pre {
   padding: 8px 15px;
   background: #f8f8f8;
   overflow-x: auto;
-  box-shadow:
-    0 -4px #f8f8f8, 0 -8px #e5e5e5, 4px 0 #f8f8f8, 4px -4px #e5e5e5,
-    8px 0 #e5e5e5, 0 4px #f8f8f8, 0 8px #e5e5e5, -4px 0 #f8f8f8,
-    -4px 4px #e5e5e5, -8px 0 #e5e5e5, -4px -4px #e5e5e5, 4px 4px #e5e5e5;
+  box-shadow: 0 -4px #f8f8f8, 0 -8px #e5e5e5, 4px 0 #f8f8f8, 4px -4px #e5e5e5,
+  8px 0 #e5e5e5, 0 4px #f8f8f8, 0 8px #e5e5e5, -4px 0 #f8f8f8,
+  -4px 4px #e5e5e5, -8px 0 #e5e5e5, -4px -4px #e5e5e5, 4px 4px #e5e5e5;
 }
 
 table {
@@ -106,20 +105,20 @@ header {
   width: 700px;
 }
 
-header img{
-  display: block;
-  width: 220px;
+
+header img {
+  float: left;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10px;
+  width: 33%;
 }
 
-header h1 a{
+header h1 a {
   color: #fff;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
-card h1{
+card h1 {
   color: #fff;
   text-shadow: 3px 3px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
@@ -165,10 +164,9 @@ footer {
 
 .nes-container h1 a {
   color: #fff;
-  text-shadow:
-    3px 3px 0 #000, -1px -1px 0 #000,
-    1px -1px 0 #000, -1px 1px 0 #000,
-    1px 1px 0 #000;
+  text-shadow: 3px 3px 0 #000, -1px -1px 0 #000,
+  1px -1px 0 #000, -1px 1px 0 #000,
+  1px 1px 0 #000;
 }
 
 .description {
@@ -186,6 +184,7 @@ footer {
   color: #333;
   text-decoration: none;
 }
+
 .github-link > p.nes-balloon {
   font-family: 'Press Start 2P', Helvetica, Arial, sans-serif;
   align-self: flex-start;
@@ -193,6 +192,7 @@ footer {
   font-size: 0.8rem;
   color: #333;
 }
+
 .github-link > i.nes-octocat {
   align-self: flex-end;
 }
@@ -215,8 +215,8 @@ footer {
 .nes-container.social {
   font-family: 'Press Start 2P', Helvetica, Arial, sans-serif;
   border: none;
-  padding-top: 10px;
-  padding-bottom: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
   margin-top: 6px;
 }
 
@@ -231,12 +231,15 @@ footer {
   color: #fafafa;
   background-color: #01b801;
 }
+
 .nes-btn.is-file::after {
   box-shadow: inset -4px -4px #007800;
 }
+
 .nes-btn.is-file:hover {
   background-color: #5adb57;
 }
+
 .nes-btn.is-file:hover::after {
   box-shadow: inset -6px -6px #01b801;
 }
@@ -307,34 +310,33 @@ a span.previous::before,
 a span.next::before {
   color: #58c7ff;
 }
+
 a:hover span.previous::before,
 a:hover span.next::before {
   color: #3fbfff;
 }
 
 .previous::before {
-  box-shadow:
-    2px 8px,
-    4px 6px,4px 8px,4px 10px,
-    6px 4px,6px 6px,6px 8px,6px 10px,6px 12px,
-    8px 4px,8px 6px,8px 8px,8px 10px,8px 12px,
-    10px 2px,10px 4px,10px 6px,10px 8px,10px 10px,10px 12px, 10px 14px,
-    12px 2px,12px 4px,12px 6px,12px 8px,12px 10px,12px 12px, 12px 14px,
-    14px 0px,14px 2px,14px 4px,14px 6px,14px 8px,14px 10px,14px 12px, 14px 14px, 14px 16px,
-    16px 0px,16px 2px,16px 4px,16px 6px,16px 8px,16px 10px,16px 12px, 16px 14px, 16px 16px;
+  box-shadow: 2px 8px,
+  4px 6px, 4px 8px, 4px 10px,
+  6px 4px, 6px 6px, 6px 8px, 6px 10px, 6px 12px,
+  8px 4px, 8px 6px, 8px 8px, 8px 10px, 8px 12px,
+  10px 2px, 10px 4px, 10px 6px, 10px 8px, 10px 10px, 10px 12px, 10px 14px,
+  12px 2px, 12px 4px, 12px 6px, 12px 8px, 12px 10px, 12px 12px, 12px 14px,
+  14px 0px, 14px 2px, 14px 4px, 14px 6px, 14px 8px, 14px 10px, 14px 12px, 14px 14px, 14px 16px,
+  16px 0px, 16px 2px, 16px 4px, 16px 6px, 16px 8px, 16px 10px, 16px 12px, 16px 14px, 16px 16px;
 }
 
 .next::before {
-  box-shadow:
-    2px 0px, 4px 0px,
-    2px 2px, 4px 2px, 6px 2px, 8px 2px,
-    2px 4px, 4px 4px, 6px 4px, 8px 4px, 10px 4px, 12px 4px,
-    2px 6px, 4px 6px, 6px 6px, 8px 6px, 10px 6px, 12px 6px, 14px 6px,
-    2px 8px, 4px 8px, 6px 8px, 8px 8px, 10px 8px, 12px 8px, 14px 8px, 16px 8px,
-    2px 10px, 4px 10px, 6px 10px, 8px 10px, 10px 10px, 12px 10px, 14px 10px,
-    2px 12px, 4px 12px, 6px 12px, 8px 12px, 10px 12px, 12px 12px,
-    2px 14px, 4px 14px, 6px 14px, 8px 14px,
-    2px 16px, 4px 16px;
+  box-shadow: 2px 0px, 4px 0px,
+  2px 2px, 4px 2px, 6px 2px, 8px 2px,
+  2px 4px, 4px 4px, 6px 4px, 8px 4px, 10px 4px, 12px 4px,
+  2px 6px, 4px 6px, 6px 6px, 8px 6px, 10px 6px, 12px 6px, 14px 6px,
+  2px 8px, 4px 8px, 6px 8px, 8px 8px, 10px 8px, 12px 8px, 14px 8px, 16px 8px,
+  2px 10px, 4px 10px, 6px 10px, 8px 10px, 10px 10px, 12px 10px, 14px 10px,
+  2px 12px, 4px 12px, 6px 12px, 8px 12px, 10px 12px, 12px 12px,
+  2px 14px, 4px 14px, 6px 14px, 8px 14px,
+  2px 16px, 4px 16px;
 }
 
 .post-info {
@@ -342,6 +344,7 @@ a:hover span.next::before {
   margin-bottom: 20px;
   color: #777;
 }
+
 .post-info b {
   font-family: 'Courier New', Courier, monospace;
   display: inline-block;
@@ -432,4 +435,50 @@ a:hover span.next::before {
     font-size: 12pt;
     color: #444;
   }
+}
+
+
+.nes-icon.instagram::before {
+  width: 1px;
+  height: 1px;
+  color: #FFC2F2;
+  box-shadow: 48px 1px #8005c8, 4px 1px #8005c8, 5px 1px #8005c8, 6px 1px #8005c8, 7px 1px #8005c8,
+  8px 1px #8005c8, 9px 1px #8005c8, 10px 1px #8005c8, 11px 1px #8005c8, 12px 1px #8005c8, 13px 1px #8005c8,
+  14px 1px #8005c8, 2px 2px #8005c8, 3px 2px #8005c8, 4px 2px #8005c8, 5px 2px #8005c8, 6px 2px #8005c8,
+  7px 2px #8005c8, 8px 2px #8005c8, 9px 2px #8005c8, 10px 2px #8005c8, 11px 2px #8005c8, 12px 2px #8005c8,
+  13px 2px #8005c8, 14px 2px #8005c8, 15px 2px #8005c8, 1px 3px #8005c8, 2px 3px #8005c8, 3px 3px #8005c8,
+  4px 3px, 5px 3px, 6px 3px, 7px 3px, 8px 3px, 9px 3px, 10px 3px, 11px 3px, 12px 3px, 13px 3px, 14px 3px #8005c8,
+  15px 3px #8005c8, 16px 3px #8005c8, 1px 4px #8005c8, 2px 4px #8005c8, 3px 4px, 4px 4px, 5px 4px, 6px 4px, 7px 4px,
+  8px 4px, 9px 4px, 10px 4px, 11px 4px, 12px 4px #8005c8, 13px 4px #8005c8, 14px 4px, 15px 4px #8005c8,
+  16px 4px #8005c8, 1px 5px #8005c8, 2px 5px #8005c8, 3px 5px, 4px 5px, 5px 5px, 6px 5px, 7px 5px, 8px 5px, 9px 5px,
+  10px 5px, 11px 5px, 12px 5px #8005c8, 13px 5px #8005c8, 14px 5px, 15px 5px #8005c8, 16px 5px #8005c8, 1px 6px #8005c8,
+  2px 6px #8005c8, 3px 6px, 4px 6px, 5px 6px, 6px 6px, 7px 6px #8005c8, 8px 6px #8005c8, 9px 6px #8005c8,
+  10px 6px #8005c8, 11px 6px, 12px 6px, 13px 6px, 14px 6px, 15px 6px #8005c8, 16px 6px #8005c8, 1px 7px #d40075,
+  2px 7px #8005c8, 3px 7px, 4px 7px, 5px 7px, 6px 7px #8005c8, 7px 7px, 8px 7px, 9px 7px, 10px 7px, 11px 7px #8005c8,
+  12px 7px, 13px 7px, 14px 7px, 15px 7px #8005c8, 16px 7px #d40075, 1px 8px #d40075, 2px 8px #d40075, 3px 8px, 4px 8px,
+  5px 8px, 6px 8px #8005c8, 7px 8px, 8px 8px, 9px 8px, 10px 8px, 11px 8px #8005c8, 12px 8px, 13px 8px, 14px 8px,
+  15px 8px #d40075, 16px 8px #d40075, 1px 9px #d40075, 2px 9px #d40075, 3px 9px, 4px 9px, 5px 9px, 6px 9px #d40075,
+  7px 9px, 8px 9px, 9px 9px, 10px 9px, 11px 9px #d40075, 12px 9px, 13px 9px, 14px 9px, 15px 9px #d40075,
+  16px 9px #d40075, 1px 10px #d40075, 2px 10px #d40075, 3px 10px, 4px 10px, 5px 10px, 6px 10px #d40075, 7px 10px,
+  8px 10px, 9px 10px, 10px 10px, 11px 10px #d40075, 12px 10px, 13px 10px, 14px 10px, 15px 10px #d40075,
+  16px 10px #d40075, 1px 11px #e98c25, 2px 11px #e98c25, 3px 11px, 4px 11px, 5px 11px, 6px 11px, 7px 11px #d40075,
+  8px 11px #d40075, 9px 11px #d40075, 10px 11px #d40075, 11px 11px, 12px 11px, 13px 11px, 14px 11px, 15px 11px #d40075,
+  16px 11px #d40075, 1px 12px #e98c25, 2px 12px #e98c25, 3px 12px, 4px 12px, 5px 12px, 6px 12px, 7px 12px, 8px 12px,
+  9px 12px, 10px 12px, 11px 12px, 12px 12px, 13px 12px, 14px 12px, 15px 12px #d40075, 16px 12px #d40075,
+  1px 13px #e98c25, 2px 13px #e98c25, 3px 13px, 4px 13px, 5px 13px, 6px 13px, 7px 13px, 8px 13px, 9px 13px, 10px 13px,
+  11px 13px, 12px 13px, 13px 13px, 14px 13px, 15px 13px #d84646, 16px 13px #d84646, 1px 14px #e98c25, 2px 14px #e98c25,
+  3px 14px #e98c25, 4px 14px, 5px 14px, 6px 14px, 7px 14px, 8px 14px, 9px 14px, 10px 14px, 11px 14px, 12px 14px,
+  13px 14px, 14px 14px #d84646, 15px 14px #d84646, 16px 14px #d84646, 2px 15px #e98c25, 3px 15px #e98c25,
+  4px 15px #e98c25, 5px 15px #e98c25, 6px 15px #e98c25, 7px 15px #e98c25, 8px 15px #e98c25, 9px 15px #e98c25,
+  10px 15px #d84646, 11px 15px #d84646, 12px 15px #d84646, 13px 15px #d84646, 14px 15px #d84646, 15px 15px #d84646,
+  3px 16px #e98c25, 4px 16px #e98c25, 5px 16px #e98c25, 6px 16px #e98c25, 7px 16px #e98c25, 8px 16px #e98c25,
+  9px 16px #d84646, 10px 16px #d84646, 11px 16px #d84646, 12px 16px #d84646, 13px 16px #d84646, 14px 16px #d84646;
+}
+
+.nes-icon.instagram::before:hover::after {
+  color: #5adb57;
+}
+
+.nes-icon.instagram:hover::after {
+  color: #5adb57;
 }
