--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,10 @@
 <header>
   <div class="header">
-    <img src="images/output-onlinepngtools.png" alt="Logo" />
+    <div class="header-pics">
+    <img src="images/palm-tree.png" alt="Tree" style="width: 25%; margin-right: 5%"/>
+    <img src="images/manny-nidal.png" alt="Logo" style="width: 40%; margin-bottom: 25px"/>
+    <img src="images/palm-tree.png" alt="Tree" style="width: 25%; margin-left: 5%"/>
+    </div>
     <h1>
       <a href="{{ '/' | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a>
     </h1>
