--- a/_includes/card.html
+++ b/_includes/card.html
@@ -9,7 +9,7 @@
 </div>
 <div class="nes-container is-rounded green-border card">
     <h1>
-        HOT GIRL SHIT
+        HELLO WORLD
     </h1>
 </div>
 
